client/charts/api/base/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-storage
  labels:
    app: redis
spec:
  serviceName: redis-service
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: public.ecr.aws/docker/library/redis:7
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
              name: redis-storage
          volumeMounts:
            - name: config-map
              mountPath: /mnt/
          command:
            - redis-server
            - "/mnt/redis-config.conf"
      volumes:
        - name: config-map
          configMap:
            name: redis-config
