client/charts/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-nodeport
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      targetPort: 9090
      port: 9090
